changes to spacing of contact info and fixed contact info not changing when clicking on a different name.

--- a/index.css
+++ b/index.css
@@ -292,9 +292,12 @@ body {
   color: var(--color-b);
 }
 
-.contact-section {
-  display: inline-block;
-  width: 8px;
+#contact {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+  flex-flow: row wrap;
 }
 
 /* ============================================================================= */
